# django_task-project

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
mywebsite/: db_config.py  settings.py
mywebsite/static/css/: style.css
mywebsite_root/mywebsite/: settings.py  urls.py
mywebsite_root/mywebsite/static/fonts/: Exo-Black.eot
mywebsite_root/mywebsite/static/js/: script.js
mywebsite_root/registerapp/: urls.py
mywebsite_root/registerapp/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_delete_task.py
mywebsite_root/task_app/: views.py
mywebsite_root/tasks/: models.py  views.py
mywebsite_root/tasks/migrations/: 0001_initial.py
mywebsite_root/templates/: index.html  login.html  page.html  register.html
mywebsite_root/user_app/: apps.py  urls.py  views.py
mywebsite_root/user_app/migrations/: 0003_initial.py  0004_delete_task.py
task_app/: apps.py  models.py  views.py
templates/: base.html  index.html  login.html  register.html
user_app/: forms.py  views.py
user_app/migrations/: 0002_delete_user.py
